--- a/Index5.html
+++ b/Index5.html
@@ -1,13 +1,13 @@
 <html>
-	<head>
-	<TITLE>‡адание заголовка текста</TITLE></head>
-	<BODY>
-		<Font face=Arial Color="#754C24">‚иды заголовков текста</Font><br>
-		<H1> текст1 </H1>
-		<H2> текст2 </H2>
-		<H3> текст3 </H3>
-		<H6> текст4 </H6>
-		<H4> текст5 </H4>
-		<H5> текст6 </H5>
-	</BODY>
+<head>
+<TITLE>Р—Р°РґР°РЅРёРµ Р·Р°РіРѕР»РѕРІРєР° С‚РµРєСЃС‚Р°</TITLE></head>
+<BODY>
+<Font face=Arial Color="#754C24">Р’РёРґС‹ Р·Р°РіРѕР»РѕРІРєРѕРІ С‚РµРєСЃС‚Р°</Font><br>
+<H1> С‚РµРєСЃС‚1 </H1>
+<H2> С‚РµРєСЃС‚2 </H2>
+<H3> С‚РµРєСЃС‚3 </H3>
+<H6> С‚РµРєСЃС‚4 </H6>
+<H4> С‚РµРєСЃС‚5 </H4>
+<H5> С‚РµРєСЃС‚6 </H5>
+</BODY>
 </html>
