--- a/Index5.html
+++ b/Index5.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<TITLE>Р—Р°РґР°РЅРёРµ Р·Р°РіРѕР»РѕРІРєР° С‚РµРєСЃС‚Р°</TITLE></head>
+<TITLE>Задание заголовка текста</TITLE></head>
 <BODY>
-<Font face=Arial Color="#754C24">Р’РёРґС‹ Р·Р°РіРѕР»РѕРІРєРѕРІ С‚РµРєСЃС‚Р°</Font><br>
-<H1> С‚РµРєСЃС‚1 </H1>
-<H2> С‚РµРєСЃС‚2 </H2>
-<H3> С‚РµРєСЃС‚3 </H3>
-<H6> С‚РµРєСЃС‚4 </H6>
-<H4> С‚РµРєСЃС‚5 </H4>
-<H5> С‚РµРєСЃС‚6 </H5>
+<Font face=Arial Color="#754C24">Виды заголовков текста</Font><br>
+<H1> Дата рождения: 05.02.1989 г.</H1>
+<H2> Рост: Сто шестьдесят два сантиметра </H2>
+<H3> На общение с друзьями в сети Интернет трачу от 15 минут (соцсети) до 4 часов (ММО) </H3>
+<H6> Мне интересна разработка в сфере GameDev, возможно, программирование графики, текстур </H6>
+<H4> Впервые вышла в сеть Интернет в 2003 году, еще по DialUp :(  </H4>
+<H5> В группе я дружу со всеми! </H5>
 </BODY>
 </html>
